--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTest">
         <activity android:name=".ui.squareDetail.bDetailActivity"></activity>
-        <activity android:name=".ui.Myclue.MyClueActivity" />
+        <activity android:name=".ui.myclue.MyClueActivity" />
         <activity android:name=".ui.myresult.MatchResultActivity"></activity>
         <activity android:name=".ui.submit.Submit2Activity" />
         <activity android:name=".ui.myrelative.MyRelativeActivity" />
