--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 09 20:09:19 CST 2021
-sdk.dir=C\:\\AndroidstudioJDK
+#Thu Jun 10 03:41:15 CST 2021
+sdk.dir=/Users/lyrain/Library/Android/sdk
