--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 08 23:02:36 CST 2021
-sdk.dir=/Users/lyrain/Library/Android/sdk
+#Thu Jun 10 15:03:15 CST 2021
+sdk.dir=C\:\\Users\\LYF\\AppData\\Local\\Android\\Sdk
