store local data and update myFindDetailActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTest">
-        <activity android:name=".ui.squareDetail.bDetailActivity"></activity>
+        <activity android:name=".ui.myfind.MyFindDetailActivity"></activity>
+        <activity android:name=".ui.squareDetail.bDetailActivity" />
         <activity android:name=".ui.Myclue.MyClueActivity" />
-        <activity android:name=".ui.myresult.MatchResultActivity"></activity>
+        <activity android:name=".ui.myresult.MatchResultActivity" />
         <activity android:name=".ui.submit.Submit2Activity" />
         <activity android:name=".ui.myrelative.MyRelativeActivity" />
         <activity android:name=".ui.squareDetail.aDetailActivity" />
@@ -28,6 +29,7 @@
             android:fitsSystemWindows="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
