--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 10 03:41:15 CST 2021
-sdk.dir=/Users/lyrain/Library/Android/sdk
+#Fri Jun 11 08:00:23 CST 2021
+sdk.dir=C\:\\Users\\LYF\\AppData\\Local\\Android\\Sdk
