--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'D:\\Git\\android\\Reunion\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
+    compile 'com.github.bumptech.glide:glide:4.11.0'
+    compile 'com.lzy.widget:imagepicker:0.6.1'
+    implementation 'commons-httpclient:commons-httpclient:3.1'
+    implementation 'com.alibaba:fastjson:1.2.44'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
