--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.MyTest">
         <activity android:name=".ui.myrelative.MyRelativeDetailActivity"></activity>
         <activity android:name=".ui.myfind.MyFindDetailActivity" />
+        <activity android:name=".NotePadNewActivity" />
         <activity android:name=".ui.squareDetail.bDetailActivity" />
         <activity android:name=".ui.Myclue.MyClueActivity" />
         <activity android:name=".ui.myresult.MatchResultActivity" />
