--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,8 @@ android {
 dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation fileTree(dir: 'D:\\Git\\android\\Reunion\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
-    compile 'com.github.bumptech.glide:glide:4.11.0'
-    compile 'com.lzy.widget:imagepicker:0.6.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.lzy.widget:imagepicker:0.6.1'
     implementation 'commons-httpclient:commons-httpclient:3.1'
     implementation 'com.alibaba:fastjson:1.2.44'
 
